--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -9,24 +9,85 @@
 <body>
     <table class="main">
         <tr>
-            <td><img src="images/bg_top.jpg" alt="Новий персонаж"></td>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_top.jpg" alt="Новий персонаж"></td>
         </tr>
         <tr>
             <td>
                 <h1>Показ новых карт</h1>
                 <h2>Тесс Седогрив</h2>
                 <p>
-                    Призовите на помощь принцессу Тесс Седогрив — она выйдет из тени и 
+                    Призовите на помощь принцессу <b class="yellow-txt">Тесс Седогрив</b> — она выйдет из тени и 
                     позволит обвести противника вокруг пальца! Это легендарное существо 
                     позволит вам активнее применять возможности, позаимствованные у 
                     других классов.
                 </p>
                 <p>
-                    Оформите предзаказ на 50 комплектов карт из дополнения «Ведьмин 
-                    лес» и получите в подарок еще 20 комплектов и рубашку «В темном 
-                    лесу».
+                    <b class="orange-txt">Оформите предзаказ</b> на 50 комплектов карт из дополнения «Ведьмин 
+                    лес» и получите в подарок <b class="yellow-txt">еще 20 комплектов</b> и рубашку <b class="yellow-txt">«В темном
+                    лесу».</b>
                 </p>
             </td>
+        </tr>
+        <tr>
+            <td class="row"><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.png" alt="Нові персонажі"></td>
+        </tr>
+        <tr>
+            <td>
+                
+                <h2>Ведьмин лис</h2>
+                <p>
+                    Создайте колоду на основе способности «Тесс Седогрив» нарушать планы 
+                    противника. В этом вам помогут новые карты — например, <b class="yellow-txt">«Ведьмин
+                    лис»</b>. Это хитрое существо обеспечит хозяину преимущество своим 
+                    боевым кличем, который добавляет в руку игрока случайную карту, 
+                    предназначенную для класса противника.
+                </p>
+                <a href="#" class="button">Другие Карты</a>
+            </td>
+        </tr>    
+        <tr>
+            <td>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти">
+                <h2><span class="blue-txt">В подарок с предзаказом на “Ведьмин лес”</span></h2>
+                    <h2><span class="purple-txt">20 комплектов</span></h2>
+                    <h2>и рубашка для карт “В темном лесу”</h2>
+                
+                <a href="#" class="button">Оформить предзаказ</a>
+                <p>Предложение действительно до выхода дополнения “Ведьмин лес”.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови">
+                <h2>Открываем последние карты в прямом эфире</h2>
+                <p>Последние карты из дополнения «Ведьмин лес» будут открыты в прямом 
+                    эфире <b class="yellow-txt">9 апреля в 21:00 МСК</b> на нашем канале Twitch. Прогуляйтесь 
+                    напоследок по заколдованному лесу перед выходом дополнения вместе с 
+                    <b class="yellow-txt">Беном Броудом</b> и <b class="yellow-txt">Day[9]</b>!
+                </p>
+                <a href="#" class="button">Смотрите трансляцию</a>
+            </td>
+        </tr>
+        <tr class="bottom">
+            <td>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.png" alt="лінія">
+                <h2>Будем на связи!</h2>
+                <p>Общайтесь с единомышленниками на официальном сайте или в соцсетях.</p>
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.png" alt="твітер"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.png" alt="ютуб"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_instagram.png" alt="інстаграм"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_vk.png" alt="інстарам"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_reddit.png" alt="редіт"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_google.png" alt="гугл"></a>
+            </td>
+        </tr>
+        <tr>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_bottom.png" alt="Логотип копанії"></td>
         </tr>
     </table>
 </body>
