--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -29,7 +29,7 @@
             </td>
         </tr>
         <tr>
-            <td class="row"><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.png" alt="Нові персонажі"></td>
+            <td><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.png" alt="Нові персонажі"></td>
         </tr>
         <tr>
             <td>
@@ -48,8 +48,8 @@
         <tr>
             <td>
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти">
-                <h2><span class="blue-txt">В подарок с предзаказом на “Ведьмин лес”</span></h2>
-                    <h2><span class="purple-txt">20 комплектов</span></h2>
+                    <h2 class="lightblue-txt">В подарок с предзаказом на “Ведьмин лес”</h2>
+                    <h2 class="purple-txt">20 комплектов</h2>
                     <h2>и рубашка для карт “В темном лесу”</h2>
                 
                 <a href="#" class="button">Оформить предзаказ</a>
@@ -60,7 +60,8 @@
             <td>
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови">
                 <h2>Открываем последние карты в прямом эфире</h2>
-                <p>Последние карты из дополнения «Ведьмин лес» будут открыты в прямом 
+                <p>
+                    Последние карты из дополнения «Ведьмин лес» будут открыты в прямом 
                     эфире <b class="yellow-txt">9 апреля в 21:00 МСК</b> на нашем канале Twitch. Прогуляйтесь 
                     напоследок по заколдованному лесу перед выходом дополнения вместе с 
                     <b class="yellow-txt">Беном Броудом</b> и <b class="yellow-txt">Day[9]</b>!
@@ -71,8 +72,8 @@
         <tr class="bottom">
             <td>
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.png" alt="лінія">
-                <h2>Будем на связи!</h2>
-                <p>Общайтесь с единомышленниками на официальном сайте или в соцсетях.</p>
+                <h2 class="blue-txt">Будем на связи!</h2>
+                <p>Общайтесь с единомышленниками на <a href="#" class="darkorange-txt"><b>официальном сайте</b></a> или в <b class="darkorange-txt">соцсетях</b>.</p>
                 <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.png" alt="твітер"></a>
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
                 <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.png" alt="ютуб"></a>
