--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -12,7 +12,7 @@
             <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_top.jpg" alt="Новий персонаж"></td>
         </tr>
         <tr>
-            <td>
+            <td class="wrapper">
                 <h1>Показ новых карт</h1>
                 <h2>Тесс Седогрив</h2>
                 <p>
@@ -29,11 +29,10 @@
             </td>
         </tr>
         <tr>
-            <td><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.png" alt="Нові персонажі"></td>
+            <td><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.jpeg" alt="Нові персонажі"></td>
         </tr>
         <tr>
-            <td>
-                
+            <td class="wrapper">
                 <h2>Ведьмин лис</h2>
                 <p>
                     Создайте колоду на основе способности «Тесс Седогрив» нарушать планы 
@@ -42,53 +41,64 @@
                     боевым кличем, который добавляет в руку игрока случайную карту, 
                     предназначенную для класса противника.
                 </p>
-                <a href="#" class="button">Другие Карты</a>
+                <p class="button">
+                    <a href="#" >Другие Карты</a>
+                </p>
             </td>
+        </tr>
+        <tr>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти"></td>
         </tr>    
         <tr>
-            <td>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти">
-                    <h2 class="lightblue-txt">В подарок с предзаказом на “Ведьмин лес”</h2>
-                    <h2 class="purple-txt">20 комплектов</h2>
-                    <h2>и рубашка для карт “В темном лесу”</h2>
-                
-                <a href="#" class="button">Оформить предзаказ</a>
+            <td class="wrapper">
+                <h2 class="lightblue-txt">В подарок с предзаказом</h2>
+                <h2 class="lightblue-txt">на “Ведьмин лес”</h2>
+                <h2 class="purple-txt">20 комплектов</h2>
+                <h3>и рубашка для карт “В темном лесу”</h3>
+                <p class="button">
+                    <a href="#">Оформить предзаказ</a>
+                </p>
                 <p>Предложение действительно до выхода дополнения “Ведьмин лес”.</p>
             </td>
         </tr>
         <tr>
-            <td>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови">
-                <h2>Открываем последние карты в прямом эфире</h2>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови"></td>
+        </tr>
+        <tr>
+            <td class="wrapper">
+                <h2>Открываем последние карты</h2>
+                <h2>в прямом эфире</h2>
                 <p>
                     Последние карты из дополнения «Ведьмин лес» будут открыты в прямом 
                     эфире <b class="yellow-txt">9 апреля в 21:00 МСК</b> на нашем канале Twitch. Прогуляйтесь 
                     напоследок по заколдованному лесу перед выходом дополнения вместе с 
                     <b class="yellow-txt">Беном Броудом</b> и <b class="yellow-txt">Day[9]</b>!
                 </p>
-                <a href="#" class="button">Смотрите трансляцию</a>
+                <p class="button">
+                    <a href="#">Смотрите трансляцию</a>
+                </p>
             </td>
         </tr>
-        <tr class="bottom">
+        <tr class="bottom wrapper">
             <td>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.png" alt="лінія">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.jpeg" alt="лінія">
                 <h2 class="blue-txt">Будем на связи!</h2>
                 <p>Общайтесь с единомышленниками на <a href="#" class="darkorange-txt"><b>официальном сайте</b></a> или в <b class="darkorange-txt">соцсетях</b>.</p>
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.png" alt="твітер"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.png" alt="ютуб"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_instagram.png" alt="інстаграм"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_vk.png" alt="інстарам"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_reddit.png" alt="редіт"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.png" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_google.png" alt="гугл"></a>
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.jpeg" alt="твітер"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.jpeg" alt="ютуб"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_instagram.jpeg" alt="інстаграм"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_vk.jpeg" alt="інстарам"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_reddit.jpeg" alt="редіт"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_google.jpeg" alt="гугл"></a>
             </td>
         </tr>
         <tr>
-            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_bottom.png" alt="Логотип копанії"></td>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_bottom.jpeg" alt="Логотип копанії"></td>
         </tr>
     </table>
 </body>
