--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -8,30 +8,30 @@
 </head>
 <body>
     <table class="main">
-        <tr>
+        <tr><!-- картінка Тесс -->
             <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_top.jpg" alt="Новий персонаж"></td>
         </tr>
-        <tr>
+        <tr><!-- Опис про Тесс-->
             <td class="wrapper">
-                <h1>Показ новых карт</h1>
-                <h2>Тесс Седогрив</h2>
-                <p>
+                <h1 class="mgnone">Показ новых карт</h1>
+                <h2 class="mg-bottom-h2">Тесс Седогрив</h2>
+                <p class="mgbottom">
                     Призовите на помощь принцессу <b class="yellow-txt">Тесс Седогрив</b> — она выйдет из тени и 
                     позволит обвести противника вокруг пальца! Это легендарное существо 
                     позволит вам активнее применять возможности, позаимствованные у 
                     других классов.
                 </p>
                 <p>
-                    <b class="orange-txt">Оформите предзаказ</b> на 50 комплектов карт из дополнения «Ведьмин 
-                    лес» и получите в подарок <b class="yellow-txt">еще 20 комплектов</b> и рубашку <b class="yellow-txt">«В темном
+                    <a href="#" class="orange-txt"><b>Оформите предзаказ</b></a> на 50 комплектов карт из дополнения «Ведьмин лес»<br> 
+                    и получите в подарок <b class="yellow-txt">еще 20 комплектов</b> и рубашку <b class="yellow-txt">«В темном
                     лесу».</b>
                 </p>
             </td>
         </tr>
-        <tr>
-            <td><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.jpeg" alt="Нові персонажі"></td>
+        <tr><!-- Картинка новох карт -->
+            <td><img class="" src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/cards.jpg" alt="Нові персонажі"></td>
         </tr>
-        <tr>
+        <tr><!-- Відьмин лис-->
             <td class="wrapper">
                 <h2>Ведьмин лис</h2>
                 <p>
@@ -46,28 +46,33 @@
                 </p>
             </td>
         </tr>
-        <tr>
+        <tr><!--зображення однієї карти -->
             <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти"></td>
         </tr>    
-        <tr>
+         <tr><!--опис плюшок до обнови -->
             <td class="wrapper">
-                <h2 class="lightblue-txt">В подарок с предзаказом</h2>
-                <h2 class="lightblue-txt">на “Ведьмин лес”</h2>
-                <h2 class="purple-txt">20 комплектов</h2>
+                <h2 class="mgbottom">
+                    <b class="lightblue-txt">В подарок с предзаказом</b><br>
+                    <b class="lightblue-txt mgbottom">на “Ведьмин лес”</b><br>
+                    <b class="purple-txt mgbottom">20 комплектов</b>
+                </h2>
                 <h3>и рубашка для карт “В темном лесу”</h3>
                 <p class="button">
                     <a href="#">Оформить предзаказ</a>
                 </p>
-                <p>Предложение действительно до выхода дополнения “Ведьмин лес”.</p>
+                <p class="mgnone">Предложение действительно до выхода дополнения “Ведьмин лес”.</p>
             </td>
         </tr>
-        <tr>
-            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови"></td>
+        <tr><!-- відео з твіча -->
+            <td><a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_vidio.jpg" alt="Обзор обнови"></a></td>
         </tr>
-        <tr>
+        <tr><!--Останні карти -->
+            <td>
+                <h2>Открываем  последние карты<br>в прямом эфире</h2>
+            </td>
+        </tr>
+        <tr><!--Про пряу трансляцію -->
             <td class="wrapper">
-                <h2>Открываем последние карты</h2>
-                <h2>в прямом эфире</h2>
                 <p>
                     Последние карты из дополнения «Ведьмин лес» будут открыты в прямом 
                     эфире <b class="yellow-txt">9 апреля в 21:00 МСК</b> на нашем канале Twitch. Прогуляйтесь 
@@ -79,26 +84,34 @@
                 </p>
             </td>
         </tr>
-        <tr class="bottom wrapper">
-            <td>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.jpeg" alt="лінія">
-                <h2 class="blue-txt">Будем на связи!</h2>
-                <p>Общайтесь с единомышленниками на <a href="#" class="darkorange-txt"><b>официальном сайте</b></a> или в <b class="darkorange-txt">соцсетях</b>.</p>
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.jpeg" alt="твітер"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.jpeg" alt="ютуб"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_instagram.jpeg" alt="інстаграм"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_vk.jpeg" alt="інстарам"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_reddit.jpeg" alt="редіт"></a>
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpeg" alt="крапка">
-                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_google.jpeg" alt="гугл"></a>
+        <tr class="bottom"><!--картинка лінії -->
+            <td class="line"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_line.jpg" alt="лінія"></td>
+        </tr>
+        <tr class="bottom"><!--опис соц сетей -->
+            <td class="bottom-wrapper">
+                <h2 class="blue-txt mgbottom">Будем на связи!</h2>
+                <p class="mgnone">Общайтесь с единомышленниками на <a href="#" class="darkorange-txt"><b>официальном сайте</b></a> или в<br> 
+                    <b class="darkorange-txt ">соцсетях</b>.
+                </p>
             </td>
         </tr>
-        <tr>
-            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_bottom.jpeg" alt="Логотип копанії"></td>
+        <tr class="bottom "><!--картінки соц сетей -->
+            <td class="bottom-wrapper line-img">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_twitter.jpg" alt="твітер"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_youtube.jpg" alt="ютуб"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_instagram.jpg" alt="інстаграм"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_vk.jpg" alt="вконтакті"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_reddit.jpg" alt="редіт"></a>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_point.jpg" alt="крапка">
+                <a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/ico_google.jpg" alt="гугл"></a>
+            </td>
+        </tr>
+        <tr><!--Нижня картинка -->
+            <td><a href="#"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_bottom.jpg" alt="Логотип копанії"></a></td>
         </tr>
     </table>
 </body>
