--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -47,7 +47,7 @@
             </td>
         </tr>
         <tr><!--зображення однієї карти -->
-            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/card.png" alt="Зображення карти"></td>
+            <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_card.jpg" alt="Зображення карти"></td>
         </tr>    
          <tr><!--опис плюшок до обнови -->
             <td class="wrapper">
