--- a/hearth_stone/index.html
+++ b/hearth_stone/index.html
@@ -48,14 +48,18 @@
         </tr>
         <tr><!--зображення однієї карти -->
             <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hearth_stone/images/bg_card.jpg" alt="Зображення карти"></td>
-        </tr>    
-         <tr><!--опис плюшок до обнови -->
-            <td class="wrapper">
-                <h2 class="mgbottom">
+        </tr> 
+        <tr><!-- в подарок... -->
+            <td>
+                <h2 class="mgbottom uppercase">
                     <b class="lightblue-txt">В подарок с предзаказом</b><br>
                     <b class="lightblue-txt mgbottom">на “Ведьмин лес”</b><br>
                     <b class="purple-txt mgbottom">20 комплектов</b>
                 </h2>
+            </td>
+        </tr>   
+         <tr><!--опис плюшок до обнови -->
+            <td class="wrapper">
                 <h3>и рубашка для карт “В темном лесу”</h3>
                 <p class="button">
                     <a href="#">Оформить предзаказ</a>
