--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -10,19 +10,19 @@
         <tr><!--верхівка -->
             <td class="bg-grey"></td>
             <td class="wrapper">
-                <img src="" alt="логотип">
-                <a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a>
-                <p>контактний телефон у Вашому місті</p>
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип">
+                <p class="align-txt"><a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a></p>
+                <p class="align-txt">контактний телефон у Вашому місті</p>
             </td>
             <td class="bg-grey"></td>
         </tr>
         <tr><!--середина  -->
             <td></td>
-            <td class="wrapper">
-                <table>
+            <td>
+                <table class="wrapper">
                     <tr><!-- пропозиція місяця-->
-                        <td>
-                            <img src="" alt="пропоиція місяця">
+                        <td >
+                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg-offer.jpg" alt="пропоиція місяця">
                         </td>
                     </tr>
                     <tr><!-- про компанію-->
@@ -36,12 +36,12 @@
                             <a href="#">Детальніше про нас</a>
                         </td>
                     </tr>
-                    <tr><!--переваги-->
+                    <tr><!--переваги зробити-->
                         <td></td>
                     </tr>
                     <tr><!--будинок №1-->
                         <td>
-                            <img src="#" alt="будинок №1">
+                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house1.jpg" alt="будинок №1">
                             <h3>MONTREAL (332 м<sup>2</sup>)</h3>
                             <p>
                                 Містечко оточене сосновим і листяним
@@ -56,7 +56,7 @@
                     </tr>
                     <tr><!--будинок №2-->
                         <td>
-                            <img src="#" alt="будинок №2">
+                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house2.jpg" alt="будинок №2">
                             <h3>EDMONTON (338 м<sup>2</sup>)</h3>
                             <p>
                                 Тут є все для комфортної життя: вода 
@@ -72,7 +72,7 @@
                     </tr>
                     <tr><!--будинок №3-->
                         <td>
-                            <img src="#" alt="будинок №3">
+                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house3.jpg" alt="будинок №3">
                             <h3>CALGARY (294 м<sup>2</sup>)</h3>
                             <p>
                                 Для діток тут побудована ігровий 
@@ -103,14 +103,14 @@
         <tr><!--низ-->
             <td class="bg-grey"></td>
             <td class="bottom">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_tw.png" alt="twitter">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/ico-facebook.png" alt="facebook">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_wifi.png" alt="wifi">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_pt.png" alt="pen">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_google.png" alt="google+">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in">
+                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points">
                 <p>&copy; Будівельна компанія “Хата Плюс” 2018.</p>
                 <p class="copy">
                     <a href="#">Перейти на сайт</a>
