--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -9,8 +9,8 @@
     <table class="main">
         <tr><!--верхівка -->
             <td class="bg-grey"></td>
-            <td class="wrapper">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип">
+            <td class="wrapper header">
+                <p><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип"></p>
                 <p class="align-txt"><a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a></p>
                 <p class="align-txt">контактний телефон у Вашому місті</p>
             </td>
@@ -111,8 +111,8 @@
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball">
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in">
                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points">
-                <p>&copy; Будівельна компанія “Хата Плюс” 2018.</p>
-                <p class="copy">
+                <p class="copy">&copy; Будівельна компанія “Хата Плюс” 2018.</p>
+                <p class="about-bottom">
                     <a href="#">Перейти на сайт</a>
                     <a href="#">Відписатися</a>
                 </p>
