--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -9,91 +9,126 @@
     <table class="main">
         <tr><!--верхівка -->
             <td class="bg-grey"></td>
-            <td class="wrapper header">
-                <p><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип"></p>
-                <p class="align-txt"><a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a></p>
-                <p class="align-txt">контактний телефон у Вашому місті</p>
+            <td class="wrapper header"><!--верхівка -->
+                <table class="w100">
+                    <tr>
+                        <td><a href="https://fisvif.github.io/hata_plus/"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип"></a></td>
+                        <td>
+                            <p class="align-txt tell">
+                                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/ico-phone.jpg" alt="телефон">
+                                <a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a>
+                            </p>
+                            <p class="align-txt about-phone">контактний телефон у Вашому місті</p>
+                        </td>
+                    </tr>
+                </table>
             </td>
             <td class="bg-grey"></td>
         </tr>
         <tr><!--середина  -->
             <td></td>
-            <td>
-                <table class="wrapper">
+            <td class="midle"><!--середина  -->
+                <table>
                     <tr><!-- пропозиція місяця-->
-                        <td >
-                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg-offer.jpg" alt="пропоиція місяця">
+                        <td>
+                            <a href="https://fisvif.github.io/hata_plus/"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg-offer.jpg" alt="пропоиція місяця"></a>
                         </td>
                     </tr>
                     <tr><!-- про компанію-->
-                        <td>
+                        <td class="about-company wrapper">
                             <h1>Компанія “Хата Плюс”</h1>
                             <p>
                                 Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
                                 і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною 
                                 і порятунком від сумній життя в багатоповерхівках спальних районів. 
                             </p>
-                            <a href="#">Детальніше про нас</a>
+                            <a  class="battom" href="https://fisvif.github.io/hata_plus/">Детальніше про нас</a>
                         </td>
                     </tr>
-                    <tr><!--переваги зробити-->
-                        <td></td>
+                    <tr class="advantages"><!--переваги зробити-->
+                        <td class="wrapper">
+                            <table class="w100">
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
                     <tr><!--будинок №1-->
-                        <td>
-                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house1.jpg" alt="будинок №1">
-                            <h3>MONTREAL (332 м<sup>2</sup>)</h3>
-                            <p>
-                                Містечко оточене сосновим і листяним
-                                лісом, чи не на кожній дільниці сосна,
-                                береза або клен.
-                            </p>
-                            <p>Загальна площа будови: 290 м2
-                                Кількість спалень: 3
-                                Гараж: 2 авто
-                            </p>
+                        <td class="house-one wrapper">
+                            <table class="w100">
+                                <tr>
+                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house1.jpg" alt="будинок №1"></a></td>
+                                    <td class="house-one-txt">
+                                        <h3><a href="https://fisvif.github.io/hata_plus/price.html">MONTREAL (332 м<sup>2</sup>)</a></h3>
+                                        <p>
+                                            Містечко оточене сосновим і листяним<br>
+                                            лісом, чи не на кожній дільниці сосна,<br>
+                                            береза або клен.
+                                        </p>
+                                        <p>Загальна площа будови: 290 м2<br>
+                                            Кількість спалень: 3<br>
+                                            Гараж: 2 авто
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
                     <tr><!--будинок №2-->
-                        <td>
-                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house2.jpg" alt="будинок №2">
-                            <h3>EDMONTON (338 м<sup>2</sup>)</h3>
-                            <p>
-                                Тут є все для комфортної життя: вода 
-                                з власної скважини, газова опалення, 
-                                високошвидкісна Інтернет.
-                            </p>
-                            <p>
-                                Загальна площа будови: 312 м2
-                                Кількість спалень: 4
-                                Гараж: 2 авто
-                            </p>
+                        <td class="house-two wrapper">
+                            <table class="w100">
+                                <tr>
+                                    <td class="house-two-txt">
+                                        <h3><a href="https://fisvif.github.io/hata_plus/price.html">EDMONTON (338 м<sup>2</sup>)</a></h3>
+                                        <p>
+                                            Тут є все для комфортної життя: вода<br> 
+                                            з власної скважини, газова опалення,<br> 
+                                            високошвидкісна Інтернет.
+                                        </p>
+                                        <p>
+                                            Загальна площа будови: 312 м2<br> 
+                                            Кількість спалень: 4<br> 
+                                            Гараж: 2 авто
+                                        </p>
+                                    </td>
+                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house2.jpg" alt="будинок №2"></a></td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
                     <tr><!--будинок №3-->
-                        <td>
-                            <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house3.jpg" alt="будинок №3">
-                            <h3>CALGARY (294 м<sup>2</sup>)</h3>
-                            <p>
-                                Для діток тут побудована ігровий 
-                                та спортивний майданчик, а недалеко 
-                                від містечка знаходяться дитячий садок.
-                            </p>
-                            <p>
-                                Для діток тут побудована ігровий 
-                                та спортивний майданчик, а недалеко 
-                                від містечка знаходяться дитячий садок.
-                            </p>
+                        <td class="house-tree wrapper">
+                            <table class="w100">
+                                <tr>
+                                    <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house3.jpg" alt="будинок №3"></td>
+                                    <td class="house-one-txt">
+                                        <h3><a href="https://fisvif.github.io/hata_plus/price.html">CALGARY (294 м<sup>2</sup>)</a></h3>
+                                        <p>
+                                            Для діток тут побудована ігровий<br> 
+                                            та спортивний майданчик, а недалеко<br>
+                                            від містечка знаходяться дитячий садок.
+                                        </p>
+                                        <p>
+                                            Загальна площа будови: 272 м2<br>
+                                            Кількість спалень: 3<br>
+                                            Гараж: 2 авто
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
-                    <tr><!--знижка-->
-                        <td>
+                    <tr class="sale_bg"><!--знижка-->
+                        <td class="sale">
                             <h2>Отримай знижку -10%</h2>
                             <p>
-                                Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                                Відправ цього листа 10 друзям та отримай знижку на усі котеджі.<br>
                                 Акція триває в період з 21.04.2018 по 31.10.2018 включно.
                             </p>
-                            <a href="#">Прийняти участь</a>
+                            <a class="battom" href="https://fisvif.github.io/hata_plus/index.html">Прийняти участь</a>
                         </td>
                     </tr>
                 </table>
@@ -102,19 +137,19 @@
         </tr>
         <tr><!--низ-->
             <td class="bg-grey"></td>
-            <td class="bottom">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_tw.png" alt="twitter">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/ico-facebook.png" alt="facebook">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_wifi.png" alt="wifi">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_pt.png" alt="pen">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_google.png" alt="google+">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in">
-                <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points">
+            <td class="bottom wrapper"><!--низ-->
+                <a href=""><img class="mg-none" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_tw.png" alt="twitter"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fb.png" alt="facebook"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_wifi.png" alt="wifi"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_pt.png" alt="pen"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_google.png" alt="google+"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in"></a>
+                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points"></a>
                 <p class="copy">&copy; Будівельна компанія “Хата Плюс” 2018.</p>
                 <p class="about-bottom">
-                    <a href="#">Перейти на сайт</a>
-                    <a href="#">Відписатися</a>
+                    <a href="https://fisvif.github.io/hata_plus/" class="right-line">Перейти на сайт</a>
+                    <a href="https://fisvif.github.io/hata_plus/">Відписатися</a>
                 </p>
             </td>
             <td class="bg-grey"></td>
