--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -27,7 +27,7 @@
         </tr>
         <tr><!--середина  -->
             <td></td>
-            <td class="midle"><!--середина  -->
+            <td class="midle"><!--середина -->
                 <table>
                     <tr><!-- пропозиція місяця-->
                         <td>
@@ -49,7 +49,19 @@
                         <td class="wrapper">
                             <table class="w100">
                                 <tr>
-                                    <td></td>
+                                    <td><!-- перша колонка-->>
+                                        <table>
+                                            <tr>
+                                                <td><img src="" alt="знак"></td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p><b>Зручне розташування</b></p>
+                                                    <p>Наші котеджі знаходяться<br> по всій країні</p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
                                     <td></td>
                                     <td></td>
                                 </tr>
