--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -45,25 +45,49 @@
                             <a  class="battom" href="https://fisvif.github.io/hata_plus/">Детальніше про нас</a>
                         </td>
                     </tr>
-                    <tr class="advantages"><!--переваги зробити-->
-                        <td class="wrapper">
+                    <tr><!--переваги зробити-->
+                        <td class="wrapper advantages">
                             <table class="w100">
                                 <tr>
-                                    <td><!-- перша колонка-->>
-                                        <table>
+                                    <td><!-- перша колонка-->
+                                        <table class="w100">
                                             <tr>
-                                                <td><img src="" alt="знак"></td>
+                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_star.png" alt="знак"></td>
                                             </tr>
                                             <tr>
-                                                <td>
-                                                    <p><b>Зручне розташування</b></p>
+                                                <td class="advantages-txt">
+                                                    <h4><b>Зручне розташування</b></h4>
                                                     <p>Наші котеджі знаходяться<br> по всій країні</p>
                                                 </td>
                                             </tr>
                                         </table>
                                     </td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><!-- друга колонка-->
+                                        <table class="w100">
+                                            <tr>
+                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_home.png" alt="знак"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="advantages-txt">
+                                                    <h4><b>Зручне розташування</b></h4>
+                                                    <p>Понад 50 видів котеджів<br>з усіма зручностями</p>
+                                                </td>
+                                            </tr>
+                                        </table>   
+                                    </td>
+                                    <td><!-- треття колонка-->
+                                        <table class="w100">
+                                            <tr>
+                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_three.png" alt="знак"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="advantages-txt">
+                                                    <h4><b>Зручне розташування</b></h4>
+                                                    <p>Скалиста місцевіть, свіже<br> повітря, та риболовля</p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
                                 </tr>
                             </table>
                         </td>
